--- a/src/styles/overview-print.css
+++ b/src/styles/overview-print.css
@@ -312,9 +312,15 @@ table, th, td {
 }
 
 @media print {
+  #overviewDialogContent #setupDiagram {
+    --font-size-diagram-icon: calc(var(--font-size-base) * 1.65);
+    --font-size-diagram-text: calc(var(--font-size-base) * 0.95);
+    --font-size-diagram-label: calc(var(--font-size-base) * 0.85);
+  }
+
   #overviewDialogContent #setupDiagram svg {
-    width: 96% !important;
-    max-width: 96% !important;
+    width: 100% !important;
+    max-width: 19cm !important;
   }
 }
 #overviewDialogContent #setupDiagram #diagramArea {
